Added pictures and more styling.

--- a/pages/JeannetteRodriques.html
+++ b/pages/JeannetteRodriques.html
@@ -24,20 +24,18 @@
     <!-- NAV BAR-->
     <div class="container-fluid">
         <nav class="mx-auto navbar navbar-expand-lg">
-            <div id="nav-item-container">
-                <a class="navbar-brand" href="../index.html">P&Y 50th</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon">&#9776</span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="rounded nav-item nav-link active" href="./TheRodriquezes.html">The Rodriquezes <span
-                                class="sr-only">(current)</span></a>
-                        <a class="rounded nav-item nav-link" href="./PeteRodriquez.html">Pete Rodriquez</a>
-                        <a class="rounded nav-item nav-link" href="./YvonneRodriquez.html">Yvonne Rodriquez</a>
-                        <a class="rounded nav-item nav-link" href="./JeannetteRodriques.html">Jeannette Rodriquez</a>
-                    </div>
+            <a class="navbar-brand" href="../index.html">P&Y 50th</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">&#9776</span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="rounded nav-item nav-link active" href="./TheRodriquezes.html">The Rodriquezes <span
+                            class="sr-only">(current)</span></a>
+                    <a class="rounded nav-item nav-link" href="./PeteRodriquez.html">Pete Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./YvonneRodriquez.html">Yvonne Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./JeannetteRodriques.html" style="background-color: #FFD300; color: black !important;">Jeannette Rodriquez</a>
                 </div>
             </div>
         </nav>
@@ -60,8 +58,8 @@
                     </div>
 
                     <div class="col p-0">
-                        <img class="rounded" id="the-rod-img" src="../resources/images/placeholder-image.jpg" alt="The Rodriquezes"
-                            width="500" height="500">
+                        <img class="rounded" id="the-rod-img" src="../resources/images/placeholder-image.jpg"
+                            alt="The Rodriquezes" width="500" height="500">
                     </div>
                 </div>
             </section>
