--- a/pages/YvonneRodriquez.html
+++ b/pages/YvonneRodriquez.html
@@ -24,20 +24,18 @@
     <!-- NAV BAR-->
     <div class="container-fluid">
         <nav class="mx-auto navbar navbar-expand-lg">
-            <div id="nav-item-container">
-                <a class="navbar-brand" href="../index.html">P&Y 50th</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon">&#9776</span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="rounded nav-item nav-link active" href="./TheRodriquezes.html">The Rodriquezes <span
-                                class="sr-only">(current)</span></a>
-                        <a class="rounded nav-item nav-link" href="./PeteRodriquez.html">Pete Rodriquez</a>
-                        <a class="rounded nav-item nav-link" href="./YvonneRodriquez.html">Yvonne Rodriquez</a>
-                        <a class="rounded nav-item nav-link" href="./JeannetteRodriques.html">Jeannette Rodriquez</a>
-                    </div>
+            <a class="navbar-brand" href="../index.html">P&Y 50th</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">&#9776</span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="rounded nav-item nav-link active" href="./TheRodriquezes.html">The Rodriquezes <span
+                            class="sr-only">(current)</span></a>
+                    <a class="rounded nav-item nav-link" href="./PeteRodriquez.html">Pete Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./YvonneRodriquez.html" style="background-color: #FFD300; color: black !important;">Yvonne Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./JeannetteRodriques.html">Jeannette Rodriquez</a>
                 </div>
             </div>
         </nav>
@@ -45,28 +43,28 @@
 
     <!-- ABOUT YVONNE RODRIQUEZ -->
     <div class="container">
-            <article class="bg-light rounded p-2">
-                <h1 class="text-center" id="the-rod-h1">Yvonne Rodriquez</h1>
-                <section>
-                    <div class="row">
-                        <div class="col">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                        </div>
-    
-                        <div class="col p-0">
-                            <img class="rounded" id="the-rod-img" src="../resources/images/placeholder-image.jpg" alt="The Rodriquezes" width="500"
-                                height="500">
-                        </div>
+        <article class="bg-light rounded p-2">
+            <h1 class="text-center" id="the-rod-h1">Yvonne Rodriquez</h1>
+            <section>
+                <div class="row">
+                    <div class="col">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
                     </div>
-                </section>
-            </article>
-        </div>
+
+                    <div class="col p-0">
+                        <img class="rounded" id="the-rod-img" src="../resources/images/placeholder-image.jpg"
+                            alt="The Rodriquezes" width="500" height="500">
+                    </div>
+                </div>
+            </section>
+        </article>
+    </div>
 
     <!-- ##### BOOTSRAP SCRIPTS ##### -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
