--- a/index.html
+++ b/index.html
@@ -23,22 +23,20 @@
 
 <body>
     <!-- NAV BAR-->
-    <div class="container-fluid">
-        <nav class="mx-auto navbar navbar-expand-lg">
-            <div id="nav-item-container">
-                <a class="navbar-brand" href="./index.html">P&Y 50th</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon p-0 m-0">&#9776</span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="rounded nav-item nav-link active" href="./pages/TheRodriquezes.html">The Rodriquezes <span
-                                class="sr-only">(current)</span></a>
-                        <a class="rounded nav-item nav-link" href="./pages/PeteRodriquez.html">Pete Rodriquez</a>
-                        <a class="rounded nav-item nav-link" href="./pages/YvonneRodriquez.html">Yvonne Rodriquez</a>
-                        <a class="rounded nav-item nav-link" href="./pages/JeannetteRodriques.html">Jeannette Rodriquez</a>
-                    </div>
+    <div id="nav" class="container-fluid">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="./index.html">P&Y 50th</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon p-0 m-0">&#9776</span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="rounded nav-item nav-link active" href="./pages/TheRodriquezes.html">The Rodriquezes <span
+                            class="sr-only">(current)</span></a>
+                    <a class="rounded nav-item nav-link" href="./pages/PeteRodriquez.html">Pete Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./pages/YvonneRodriquez.html">Yvonne Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./pages/JeannetteRodriques.html">Jeannette Rodriquez</a>
                 </div>
             </div>
         </nav>
@@ -46,18 +44,52 @@
 
     <!-- PICTURE SLIDES -->
     <div class="container-fluid">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="resources/images/placeholder-image.jpg" class="d-block w-100" alt="...">
+                    <img src="resources/images/pic_1.jpg" class="c-item d-block w-100" alt="Carousel Item">
                 </div>
+
                 <div class="carousel-item">
-                    <img src="resources/images/placeholder-image.jpg" class="d-block w-100" alt="...">
+                    <img src="resources/images/pic_2.jpg" class="c-item d-block w-100" alt="Carousel Item">
                 </div>
+
                 <div class="carousel-item">
-                    <img src="resources/images/placeholder-image.jpg" class="d-block w-100" alt="...">
+                    <img src="resources/images/pic_3.jpg" class="c-item d-block w-100" alt="Carousel Item">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="resources/images/pic_4.jpg" class="c-item d-block w-100" alt="Carousel Item">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="resources/images/pic_5.jpg" class="c-item d-block w-100" alt="Carousel Item">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="resources/images/pic_6.jpg" class="c-item d-block w-100" alt="Carousel Item">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="resources/images/pic_7.jpg" class="c-item d-block w-100" alt="Carousel Item">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="resources/images/pic_8.jpg" class="c-item d-block w-100" alt="Carousel Item">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="resources/images/pic_9.jpg" class="c-item d-block w-100" alt="Carousel Item">
                 </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 
@@ -71,6 +103,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <!-- INDEX.JS -->
+    <!--<script src="js/index.js"></script>-->
 </body>
 
 </html>
