--- a/pages/TheRodriquezes.html
+++ b/pages/TheRodriquezes.html
@@ -24,20 +24,18 @@
     <!-- NAV BAR-->
     <div class="container-fluid">
         <nav class="mx-auto navbar navbar-expand-lg">
-            <div id="nav-item-container">
-                <a class="navbar-brand" href="../index.html">P&Y 50th</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon">&#9776</span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="rounded nav-item nav-link active" href="./TheRodriquezes.html">The Rodriquezes <span
-                                class="sr-only">(current)</span></a>
-                        <a class="rounded nav-item nav-link" href="./PeteRodriquez.html">Pete Rodriquez</a>
-                        <a class="rounded nav-item nav-link" href="./YvonneRodriquez.html">Yvonne Rodriquez</a>
-                        <a class="rounded nav-item nav-link" href="./JeannetteRodriques.html">Jeannette Rodriquez</a>
-                    </div>
+            <a class="navbar-brand" href="../index.html">P&Y 50th</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">&#9776</span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="rounded nav-item nav-link active" href="./TheRodriquezes.html" style="background-color: #FFD300; color: black !important;">The Rodriquezes <span
+                            class="sr-only">(current)</span></a>
+                    <a class="rounded nav-item nav-link" href="./PeteRodriquez.html">Pete Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./YvonneRodriquez.html">Yvonne Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./JeannetteRodriques.html">Jeannette Rodriquez</a>
                 </div>
             </div>
         </nav>
@@ -60,12 +58,13 @@
                             A&W Rootbeer to eat and join the cruise circuit. Pete and Yvonne
                             saw eachother while cruising on Central and waved at each other, so they both pulled over at
                             a Lerners parking lot to talk.
-                            This seemingly simple encounter is what turned into this beautiful 50 year communion.<sup><br>
+                            This seemingly simple encounter is what turned into this beautiful 50 year
+                            communion.<sup><br>
                         </p>
                     </div>
 
                     <div class="col px-0 py-0">
-                        <img class="rounded" id="the-rod-img" src="../resources/images/PeteYvonneRuidoso50.jpg"
+                        <img class="rounded" id="the-rod-img" src="../resources/images/pic_1.jpg"
                             alt="The Rodriquezes" width="500" />
                     </div>
                 </div>
