--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="resources/images/pic_7.jpg" class="c-item d-block w-100" alt="Carousel Item">
+                    <img src="resources/images/edited/pic_7.png" class="c-item d-block w-100" alt="Carousel Item">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="resources/images/pic_8.jpg" class="c-item d-block w-100" alt="Carousel Item">
+                    <img src="resources/images/edited/pic_8.png" class="c-item d-block w-100" alt="Carousel Item">
                 </div>
 
                 <div class="carousel-item">
