--- a/pages/JeannetteRodriques.html
+++ b/pages/JeannetteRodriques.html
@@ -35,7 +35,8 @@
                             class="sr-only">(current)</span></a>
                     <a class="rounded nav-item nav-link" href="./PeteRodriquez.html">Pete Rodriquez</a>
                     <a class="rounded nav-item nav-link" href="./YvonneRodriquez.html">Yvonne Rodriquez</a>
-                    <a class="rounded nav-item nav-link" href="./JeannetteRodriques.html" style="background-color: #FFD300; color: black !important;">Jeannette Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./JeannetteRodriques.html"
+                        style="background-color: #FFD300; color: black !important;">Jeannette Rodriquez</a>
                 </div>
             </div>
         </nav>
@@ -43,25 +44,33 @@
 
     <!-- ABOUT JEANNETTE RODRIQUEZ -->
     <div class="container">
-        <article class="bg-light rounded p-2">
-            <h1 class="text-center" id="the-rod-h1">Jeannette Rodriquez</h1>
-            <section>
+        <article class="bg-light rounded">
+            <h1 class="text-center pt-2" id="the-rod-h1">The Rodriquezes</h1>
+            <div class="dropdown-divider"></div>
+            <section class="text-center">
                 <div class="row">
                     <div class="col">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <p class="rod-des-content">
+                            Pete & Yvonne Rodriquez, mother of Jeannette Rodriquez and grandparents to Mark Waid and
+                            Ethan Moore,
+                            have been happily married for 50 years. In other words, their marriage is what's called an
+                            old fogey union.
+                            They met in 1967 in Albuquerque, NM. Pete had a very nice GTO, and he decided to go to the
+                            A&W Rootbeer to eat and join the cruise circuit. Pete and Yvonne
+                            saw eachother while cruising on Central and waved at each other, so they both pulled over at
+                            a Lerners parking lot to talk.
+                            This seemingly simple encounter is what turned into this beautiful 50 year
+                            communion.<sup><br>
                         </p>
                     </div>
 
-                    <div class="col p-0">
-                        <img class="rounded" id="the-rod-img" src="../resources/images/placeholder-image.jpg"
-                            alt="The Rodriquezes" width="500" height="500">
+                    <div class="col px-0 py-0">
+                        <img class="rounded" id="the-rod-img" src="../resources/images/pic_1.jpg" alt="The Rodriquezes"
+                            width="500" />
                     </div>
                 </div>
+                <div class="dropdown-divider"></div>
+                <p class="rod-des-content text-center">HAPPY <br>50<sub>TH</sub><br> ANNIVERSARY!!!</p>
             </section>
         </article>
     </div>
