--- a/pages/PeteRodriquez.html
+++ b/pages/PeteRodriquez.html
@@ -34,7 +34,8 @@
                 <div class="navbar-nav">
                     <a class="rounded nav-item nav-link active" href="./TheRodriquezes.html">The Rodriquezes <span
                             class="sr-only">(current)</span></a>
-                    <a class="rounded nav-item nav-link" href="./PeteRodriquez.html" style="background-color: #FFD300; color: black !important;">Pete Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./PeteRodriquez.html"
+                        style="background-color: #FFD300; color: black !important;">Pete Rodriquez</a>
                     <a class="rounded nav-item nav-link" href="./YvonneRodriquez.html">Yvonne Rodriquez</a>
                     <a class="rounded nav-item nav-link" href="./JeannetteRodriques.html">Jeannette Rodriquez</a>
                 </div>
@@ -44,25 +45,34 @@
 
     <!-- ABOUT PETE RODRIQUEZ -->
     <div class="container">
-        <article class="bg-light rounded p-2">
-            <h1 class="text-center" id="the-rod-h1">Pete Rodriquez</h1>
-            <section>
+        <article class="bg-light rounded">
+            <h1 class="text-center pt-2" id="the-rod-h1">The Rodriquezes</h1>
+            <div class="dropdown-divider"></div>
+            <section class="text-center">
                 <div class="row">
                     <div class="col">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <p class="rod-des-content">
+                            Pete Rodriquez was born June 29th, 1946 in Albuquerque, New Mexico to a poor family. His big
+                            journey started when
+                            he was drafted into the Army at age 18 to fight in the Vietnam War. He answered his
+                            country's
+                            call and served for two
+                            years before finishing his duty and retiring from the military. However, 
+                            fitting back
+                            into civilian life after two years of violence and bloodshed was when the real hardship truly began. He met Yvonne when he was
+                            still recovering from his
+                            trauma from the military, and she has helped him to fit back into society and keep
+                            him sane ever since.
                         </p>
                     </div>
 
-                    <div class="col p-0">
-                        <img class="rounded" id="the-rod-img" src="../resources/images/placeholder-image.jpg"
-                            alt="The Rodriquezes" width="500" height="500">
+                    <div class="col px-0 py-0">
+                        <img class="rounded" id="the-rod-img" src="../resources/images/pete.JPG" alt="The Rodriquezes"
+                            width="500" />
                     </div>
                 </div>
+                <div class="dropdown-divider"></div>
+                <p class="rod-des-content text-center">HAPPY <br>50<sub>TH</sub><br> ANNIVERSARY!!!</p>
             </section>
         </article>
     </div>
