--- a/pages/TheRodriquezes.html
+++ b/pages/TheRodriquezes.html
@@ -50,7 +50,7 @@
                 <div class="row">
                     <div class="col">
                         <p class="rod-des-content">
-                            Pete & Yvonne Rodriquez, mother of Jeannette Rodriquez and grandparents to Mark Waid and
+                            Pete & Yvonne Rodriquez, parents of Jeannette Rodriquez and grandparents to Mark Waid and
                             Ethan Moore,
                             have been happily married for 50 years. In other words, their marriage is what's called an
                             old fogey union.
