--- a/pages/YvonneRodriquez.html
+++ b/pages/YvonneRodriquez.html
@@ -34,7 +34,8 @@
                     <a class="rounded nav-item nav-link active" href="./TheRodriquezes.html">The Rodriquezes <span
                             class="sr-only">(current)</span></a>
                     <a class="rounded nav-item nav-link" href="./PeteRodriquez.html">Pete Rodriquez</a>
-                    <a class="rounded nav-item nav-link" href="./YvonneRodriquez.html" style="background-color: #FFD300; color: black !important;">Yvonne Rodriquez</a>
+                    <a class="rounded nav-item nav-link" href="./YvonneRodriquez.html"
+                        style="background-color: #FFD300; color: black !important;">Yvonne Rodriquez</a>
                     <a class="rounded nav-item nav-link" href="./JeannetteRodriques.html">Jeannette Rodriquez</a>
                 </div>
             </div>
@@ -43,25 +44,32 @@
 
     <!-- ABOUT YVONNE RODRIQUEZ -->
     <div class="container">
-        <article class="bg-light rounded p-2">
-            <h1 class="text-center" id="the-rod-h1">Yvonne Rodriquez</h1>
-            <section>
+        <article class="bg-light rounded">
+            <h1 class="text-center pt-2" id="the-rod-h1">The Rodriquezes</h1>
+            <div class="dropdown-divider"></div>
+            <section class="text-center">
                 <div class="row">
                     <div class="col">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <p class="rod-des-content">
+                            Yvonne Rodriquez, formerly Helling, was born November 27, 1945 in Albuquerque, New Mexico to a
+                            beautiful family. She attended 
+                            St. Mary's Catholic School. She started her 43 year long career at 
+                            APS in 1966 after graduating from 
+                            TVI's first Secretarial class. She was Head of the 
+                            Secretarial Union, and later was promoted to President. 
+                            Yvonne retired from APS in 2009, but stayed in the Secretarial Union 
+                            until 2016. She continued to serve as 
+                            an advisor to the President of the SU until late 2019. 
                         </p>
                     </div>
 
-                    <div class="col p-0">
-                        <img class="rounded" id="the-rod-img" src="../resources/images/placeholder-image.jpg"
-                            alt="The Rodriquezes" width="500" height="500">
+                    <div class="col px-0 py-0">
+                        <img class="rounded" id="the-rod-img" src="../resources/images/yvonne.jpg" alt="The Rodriquezes"
+                            width="500" />
                     </div>
                 </div>
+                <div class="dropdown-divider"></div>
+                <p class="rod-des-content text-center">HAPPY <br>50<sub>TH</sub><br> ANNIVERSARY!!!</p>
             </section>
         </article>
     </div>
